--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>This is version 2</h1>
     <h1>Changed in github</h1>
-    <h1>Changed in local machine</h1>
+    
+    <h2>New change in local machine</h2>
 </body>
 </html>
